# pocketdarwin

./: .gitignore  .gitmodules  CMakelists.txt  GenDeviceTree  LICENSE  Makefile  README.md  board.mk  build.sh  flake.nix  memory_object_controlUser.c  shellHook.sh  uplUser.c
.github/workflows/: sync_back.yml
.poolside/: settings.local.yaml
Frameworks/: Makefile
Frameworks/AppKit/: NSWindow.m
Frameworks/CFNetwork/: CFHTTPServerPriv.h  CFHost.h  CFNetServices.h  CFServerPriv.h  CMakeLists.txt  Info.plist  Makefile
Frameworks/CoreFoundation/: Availability.h  CFFileSecurity.h  CFInternal.h  CFRunLoop.c  CFString.c  CFSystemDirectories.c  CFURL.c  CFURLEnumerator.c  CFURLEnumerator.h  CoreFoundation.h  Makefile
Frameworks/CoreFoundation.old/: CFBase.h  CFByteOrder.h  CoreFoundation.h
Frameworks/CoreGraphics/: CGAffineTransform.h  CGDirectDisplay.m
Frameworks/NextStd/NextStd/: CMakeLists.txt  GNUmakefile  README.md
Frameworks/NextStd/NextStd/Examples/: HelloNextStd.m
Frameworks/NextStd/NextStd/Headers/NextStd/: CXXSupport.h  NSArray.h  NSData.h  NSDictionary.h  NSEnumerator.h  NSObject.h  NSString.h  NSTypes.h  NSValue.h  NextStd.h
Frameworks/NextStd/NextStd/Sources/: NSArray.m  NSData.m  NSDictionary.m  NSEnumerator.m  NSObject.m  NSString.m
Frameworks/UIKit/: .gitignore  CMakeLists.txt  GNUmakefile  GNUmakefile.postamble  Info.plist  Makefile  README.md  UIAccessibility.h  UIAccessibility.m  UIApplication.h  UIApplication.m  UIButton.h  UIButton.m  UIColor.h  UIColor.m  UIDevice.h  UIDevice.m  UIEvent.h  UIEvent.m  UIFont.h  UIFont.m  UIGeometry.h  UIGestureRecognizer.h  UIGestureRecognizer.m  UIImage.h  UIImage.m  UIImageView.h  UIImageView.m  UIKit.h  UIKitExport.h  UILabel.h  UILabel.m  UIResponder.h  UIResponder.m  UIScreen.h  UIScreen.m  UIStackView.h  UIStackView.m  UIStringDrawing.h  UITableView.h  (+10 more)
Frameworks/UIKit/Examples/: GNUmakefile  MainView.xib  OpenGLExample.m  main.m
Frameworks/UIKit/Headers/UIKit/: NSBundle+UIKit.h  NSIndexPath+UIKit.h  UIActivityIndicatorView.h  UIAlertView.h  UIApplication.h  UIButton.h  UIColor.h  UIControl.h  UIDevice.h  UIFont.h  UIImage.h  UIImageView.h  UIKit.h  UIKitTypes.h  UILabel.h  UINavigationController.h  UINavigationItem.h  UINib.h  UIOpenGLView.h  UIResponder.h  UIScreen.h  UIScrollView.h  UISegmentedControl.h  UISlider.h  UISwitch.h  UITabBarController.h  UITableView.h  UITableViewCell.h  UITextField.h  UITextView.h  UIView.h  UIViewController.h  UIWindow.h
Frameworks/UIKit/Source/: GNUmakefile  GNUmakefile.postamble  NSBundle+UIKit.m  NSIndexPath+UIKit.m  UIActivityIndicatorView.m  UIAlertView.m  UIApplication.m  UIButton.m  UIColor.m  UIControl.m  UIDevice.m  UIFont.m  UIImage.m  UIImageView.m  UIKitPrivate.h  UILabel.m  UINavigationController.m  UINavigationItem.m  UINib.m  UIOpenGLView.m  UIResponder.m  UIScreen.m  UIScrollView.m  UISegmentedControl.m  UISlider.m  UISwitch.m  UITabBarController.m  UITableView.m  UITableViewCell.m  UITextField.m  UITextView.m  UIView.m  UIViewController.m  UIWindow.m
Kernel/: machine_configuration  string.h  types.h
KernelExtensions/: Makefile
PatchFiles/: MegaBoot.patch  MegaBooter.patch  XNUKernel.patch  XNUPatch.patch  dtc2adt.patch  xnu-deps-linux.patch
Script/: mkjarmtestfile.awk
Setup/: GNUmakefile  Setup.m
Tests/: lk2nd-mach-o-001.c
devicetree/: harpia.dtsv1
drivers/: AndroidPlatformDevice.cpp  AndroidPlatformDevice.h  AndroidPlatformDevice.hpp  IOKitShim.h  Makefile
libsystem-stub/: empty.c  libSystem.exports  pd_libSystem_compat.c  pd_libSystem_init.c  pd_libSystem_process.c
mindyld/: INTEGRATION.md  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  SUMMARY.md  elf_loader.c  macho_loader.c  mindyld.h  mindyld_common.h  mindyld_core.c  mindyld_elf.h  mindyld_macho.h  platform_apple.c  platform_linux.c
minlibc/: Makefile  crt.S  crt.s  gen-wrappers.sh  hello.c  libc.c  minc_convert.h  stat.h  stddef.h  stdint.h  stdlib.h  string.h  syscall_compat.h  unistd.h
nix/: BuildMyXNU.nix  build-board  build-kext  prepare-board
toolchain-bin/: arm-eabi-c++filt  arm-eabi-cpp  arm-eabi-elfedit  arm-eabi-ld  arm-eabi-ld.gold  arm-eabi-nm  arm-eabi-objdump  arm-eabi-ranlib  arm-eabi-size  arm-eabi-strip
(+836 files in other folders)
